--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .box {
   display: block;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .headerTitles {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
   color: #444;
   font-weight: 600;
   font-family: "Pacifico", cursive;
@@ -14,20 +14,33 @@
 
 .small {
   position: absolute;
-  top: 13%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Bruno Ace SC", cursive;
+  top: 20%;
   font-size: 100px;
+}
+
+.small > img {
+  margin-right: 12px;
 }
 
 .large {
   position: absolute;
-  top: 9%;
-
+  top: 5%;
   font-size: 40px;
 }
 
 .headerImg > img {
   width: 100%;
   height: 550px;
-  margin-top: 60px;
+  top: 0;
+  /* margin-top: 60px; */
   object-fit: cover;
+}
+
+.logo {
+  width: 10%;
+  border-radius: 10%;
 }
