--- a/src/components/pages/Post/Post.css
+++ b/src/components/pages/Post/Post.css
@@ -16,6 +16,10 @@
   margin-bottom: 70px;
 }
 
+.postImg > img {
+  width: 100%;
+}
+
 .postInfo {
   display: flex;
   flex-direction: column;
@@ -59,4 +63,17 @@
 .postImg > img {
   float: left;
   width: 400px;
+}
+
+.bookmark {
+  width: 100%;
+  margin: 0px 5px;
+  display: flex;
+  align-items: end;
+  justify-content: end;
+}
+
+.save,
+.saved {
+  padding: 12px;
 }
