--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -44,3 +44,21 @@
   width: 10%;
   border-radius: 10%;
 }
+
+.titles {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: end;
+}
+
+.titles > p {
+  padding-top: 5px;
+  border-top: 1px solid #444;
+}
+
+.btn {
+  display: flex;
+  align-items: end;
+  justify-content: end;
+}
