--- a/src/components/pages/Blog/Blog.css
+++ b/src/components/pages/Blog/Blog.css
@@ -6,8 +6,13 @@
   display: flex;
 }
 
+.blogImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .blogImg > img {
-  width: 100%;
   height: 480px;
 }
 
@@ -49,6 +54,36 @@
 .desc::first-letter {
   font-weight: 700;
   margin-left: 20px;
-
   font-size: 30px;
+}
+
+.commentBox {
+  margin: 20px 0px;
+}
+
+.comment > textarea {
+  width: 75%;
+  margin: 20px 0px;
+  border: none;
+  border-bottom: 1px solid #333;
+  padding: 5px;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.comment > button {
+  padding: 7px;
+  background-color: teal;
+  color: white;
+  border: none;
+  border-radius: 90px;
 }
